# state-machine-testing-presentation

./: .gitignore  LICENSE  Makefile  README.md  benchmark.yml  hie.yaml  package.yaml  slides.md  stack.yaml  state-machine-testing-presentation.cabal
app-server/: Main.hs
dump-drill-config/: Main.hs
src/App/: Api.hs  Client.hs  Server.hs
test/: Spec.hs
