cabal-version:      3.0
name:               state-machine-testing-presentation
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/jhrcek/state-machine-testing-presentation#readme>

homepage:
  https://github.com/jhrcek/state-machine-testing-presentation#readme

bug-reports:
  https://github.com/jhrcek/state-machine-testing-presentation/issues

author:             Jan Hrček
maintainer:         example@example.com
copyright:          2021 Jan Hrček
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location:
    https://github.com/jhrcek/state-machine-testing-presentation

library
  exposed-modules:  Lib
  hs-source-dirs:   src
  build-depends:
    , aeson
    , base            >=4.7 && <5
    , servant
    , servant-server
    , wai
    , warp

  default-language: Haskell2010

executable state-machine-testing-presentation-exe
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base
    , servant-server
    , state-machine-testing-presentation
    , wai
    , warp

  default-language: Haskell2010

test-suite state-machine-testing-presentation-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base
    , hspec
    , hspec-wai
    , hspec-wai-json
    , servant-server
    , state-machine-testing-presentation
    , wai
    , warp

  default-language: Haskell2010
