cabal-version:      3.0
name:               state-machine-testing-presentation
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/jhrcek/state-machine-testing-presentation#readme>

homepage:
  https://github.com/jhrcek/state-machine-testing-presentation#readme

bug-reports:
  https://github.com/jhrcek/state-machine-testing-presentation/issues

author:             Jan Hrček
maintainer:         example@example.com
copyright:          2021 Jan Hrček
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location:
    https://github.com/jhrcek/state-machine-testing-presentation

common common-options
  build-depends:    base >=4.7 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths
    -Wpartial-fields -Wno-unrecognised-pragmas -Wunused-packages

library
  import:          common-options
  exposed-modules:
    App.Api
    App.Client
    App.Server

  hs-source-dirs:  src
  build-depends:
    , aeson
    , containers
    , http-client
    , servant
    , servant-client
    , servant-server
    , wai
    , warp

executable app-server
  import:         common-options
  main-is:        Main.hs
  hs-source-dirs: app-server
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  state-machine-testing-presentation

test-suite state-machine-testing-presentation-test
  import:         common-options
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , bytestring
    , containers
    , hedgehog
    , http-types
    , servant
    , servant-client
    , servant-client-core
    , state-machine-testing-presentation
